FIX: Bottom icons in the mobile layout were not centered in safari

--- a/frontend-html/src/gui/connections/MobileComponents/ActionDropUp.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/ActionDropUp.module.scss
@@ -22,20 +22,21 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
 }
 
 .root div div div svg {
-  width: 100%;
+  width: 30px;
   height: 30px;
 }
 
 .clickArea {
   width: 100%;
   cursor: pointer;
+  justify-content: center;
+  display: flex;
 }
 
 .iconContainer {
   height: 50px;
   align-items: center;
   display: flex;
-  padding-top: 5px; // the temporary icons are actually not centered! remove when correct icons are available
 }
 
 .placeholder {
